# nexum

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
crates/nexum-cli/: Cargo.toml
crates/nexum-cli/src/: main.rs
crates/nexum-cli/src/commands/: by_session.rs  common.rs  doctor.rs  exit_codes.rs  extract.rs  get.rs  index.rs  init.rs  json_emit.rs  keys.rs  list.rs  migrate.rs  mod.rs  models.rs  project.rs  recent.rs  search.rs  trust.rs
crates/nexum-cli/tests/: cli_extract_backfill.rs  cli_extract_e2e.rs  cli_extract_envelope.rs  cli_extract_session.rs  cli_json_errors.rs  cli_models_install.rs  cli_pipe_panic.rs  cli_reanchor_pending.rs  cli_trust_validate_events.rs  doctor_reanchor.rs  index_query_cli.rs  index_sweep.rs  init_cli.rs  keys_list.rs  keys_revoke.rs  keys_rotate.rs  migrate.rs  trust_regenerate_files.rs
crates/nexum-cli/tests/common/: mod.rs
crates/nexum-core/: Cargo.toml
crates/nexum-core/examples/: bge_m3_inference.rs
crates/nexum-core/src/: lib.rs  paths.rs
crates/nexum-core/src/adapter/: cc.rs  codex.rs  local.rs  mod.rs  trait_def.rs
crates/nexum-core/src/api/: active_signer.rs  error.rs  mod.rs
crates/nexum-core/src/config/: io.rs  mod.rs  types.rs
crates/nexum-core/src/embed/: embedder.rs  inference_cell.rs  install.rs  manifest.rs  mod.rs  reporter.rs  types.rs
crates/nexum-core/src/extract/: consent.rs  discovery.rs  mod.rs  pipeline.rs  pricing.rs  record_io.rs  state.rs
crates/nexum-core/src/extract/digest/: cc.rs  codex.rs  mod.rs  types.rs
crates/nexum-core/src/extract/model/: anthropic.rs  codex_phase1.rs  mod.rs  ollama_stub.rs  openai_stub.rs  render.rs  types.rs
crates/nexum-core/src/extract/prompts/: extraction_v1.md  mod.rs  types.rs
crates/nexum-core/src/extract/redaction/: custom.rs  log.rs  mod.rs  patterns.rs  types.rs
crates/nexum-core/src/index/: meta.rs  mod.rs  schema.rs  schema.sql  tag_normalization.rs
crates/nexum-core/src/indexer/: crypto_batch.rs  db.rs  mod.rs  run.rs  state.rs
crates/nexum-core/src/init/: git_ops.rs  hooks.rs  mod.rs  options.rs  run.rs
crates/nexum-core/src/migrate/: mod.rs
crates/nexum-core/src/migrate/index_db/: mod.rs  v1_to_v2.rs
crates/nexum-core/src/project/: canon.rs  cc_slug.rs  mod.rs  resolve.rs
crates/nexum-core/src/query/: by_session.rs  get.rs  list.rs  meta.rs  mod.rs  policy.rs  recent.rs  search.rs  test_util.rs  types.rs  verify.rs
crates/nexum-core/src/records/: hash.rs  mod.rs  types.rs
crates/nexum-core/src/session/: mod.rs  runtime.rs  startup.rs
crates/nexum-core/src/ssh_key/: detect.rs  fingerprint.rs  mod.rs
crates/nexum-core/src/trust/: chain_state.rs  diff.rs  events.rs  events_view.rs  git_history.rs  key_state.rs  mod.rs  pin.rs  reanchor_pending.rs  regenerate.rs  revoke.rs  rotate.rs
crates/nexum-core/tests/: README.md  api_first_read_after_init.rs  embed_download.rs  extract_anthropic_client.rs  extract_digest_cc.rs  extract_digest_codex.rs  extract_pipeline.rs  extract_redaction.rs  fixture_semantic_e2e.rs  index_e2e.rs  index_failure_paths.rs  index_open_paths.rs  index_reembed.rs  index_schema.rs  indexer_embed.rs  init_config_seed.rs  init_e2e.rs  materializer_bootstrap_only.rs  materializer_reanchor.rs  materializer_state_machine.rs  materializer_tampering.rs  migrate_v1_to_v2.rs  migration_required.rs  ort_link_smoke.rs  paths_env.rs  paths_smoke.rs  project_resolve.rs  record_identity.rs  schema_check_constraints.rs  verify_record_branches.rs
crates/nexum-core/tests/common/: mod.rs
crates/nexum-core/tests/fixtures/cc/: README.md
crates/nexum-core/tests/fixtures/cc/projects/-tmp-fixture-my-hyphenated-app/memory/: MEMORY.md  feedback_naming.md
crates/nexum-core/tests/fixtures/cc/projects/-tmp-fixture-projalpha/memory/: MEMORY.md  feedback_test_isolation.md  project_test_setup.md  reference_useful_links.md
crates/nexum-core/tests/fixtures/cc/projects/-tmp-fixture-projbeta/: aaaaaaaa-bbbb-4ccc-8ddd-eeeeeeeeeeee.jsonl
crates/nexum-core/tests/fixtures/cc/projects/-tmp-fixture-projbeta/memory/: MEMORY.md  feedback_async_pattern.md  project_workflow.md
crates/nexum-core/tests/fixtures/cc/projects/project-a-cwd-hash/: CLAUDE.md
crates/nexum-core/tests/fixtures/cc/projects/project-b-cwd-hash/: CLAUDE.md
crates/nexum-core/tests/fixtures/cc/projects/project-b-cwd-hash/memory/: MEMORY.md
crates/nexum-core/tests/fixtures/codex/: README.md  build_state.sql  state_5.sqlite
crates/nexum-core/tests/fixtures/codex/sessions/: session-001.jsonl  session-002.jsonl
crates/nexum-core/tests/fixtures/codex/sessions/2026/04/03/: rollout-2026-04-03T12-05-00-thread-ccc.jsonl
crates/nexum-core/tests/fixtures/embed_install/: model.onnx_data
crates/nexum-core/tests/fixtures/extract/cc/: empty.jsonl  rich.jsonl
crates/nexum-core/tests/fixtures/extract/codex/: empty.jsonl  rich.jsonl
crates/nexum-core/tests/fixtures/extract/redaction/: test_corpus.toml
crates/nexum-core/tests/fixtures/semantic/: concurrency_atomic_counters.yml  concurrency_lock_contention.yml  concurrency_race_conditions.yml  concurrency_thread_safety.yml  database_btree_indexes.yml  database_sqlite_migrations.yml  database_transactions.yml  database_wal_mode.yml  onboarding_buddy_program.yml  onboarding_first_day_docs.yml  onboarding_new_hire_setup.yml  onboarding_orientation_slides.yml
crates/nexum-core/tests/trust/: fixtures.rs  mod.rs
crates/nexum-mcp/: Cargo.toml
crates/nexum-mcp/src/: dto.rs  lib.rs  main.rs  server.rs
crates/nexum-mcp/tests/: error_paths.rs  harness_smoke.rs  response_invariants.rs  stdio_smoke.rs  tool_list.rs
crates/nexum-mcp/tests/common/: mod.rs
crates/nexum-spike/: Cargo.toml
e2e/: README.md  run.sh
e2e/cc/: Dockerfile  run-test.sh
e2e/cc/fixtures/projects/-tmp-fixture-e2e/memory/: MEMORY.md  feedback_e2e_pattern.md  project_e2e_harness.md
e2e/codex/: Dockerfile  run-test.sh
e2e/codex/fixtures/memories/: MEMORY.md
