[workspace]
resolver = "2"
members = [
    "crates/nexum-core",
    "crates/nexum-cli",
    "crates/nexum-mcp",
]

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/REPLACE-ME/nexum"
authors = ["REPLACE-ME"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# Allowed exceptions; document each one in PR before adding.
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
# Pin everything explicitly. Bump deliberately, not opportunistically.
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
# Storage / search — pinned versions verified during stack-validation.
rusqlite = { version = "0.32", features = ["backup", "bundled", "vtab"] }
sqlite-vec = "0.1"
# Embeddings — `ort` is still pre-1.0 in the 2.x series.
ort = "=2.0.0-rc.12"
tokenizers = "0.20"
# Concurrency.
rayon = "1"
fs2 = "0.4"
# Test utilities — temp dirs for the test harness.
tempfile = "3"
walkdir = "2"
# Cryptographic hashing for the index DDL apply path and path-hint hashing.
sha2 = "0.10"
# Timestamps for init (config.toml established_at, META.yml init_at).
chrono = { version = "0.4", features = ["serde"] }
# MCP framework — macros + server runtime only.
rmcp = { version = "1", features = ["macros", "server"] }
# Git.
git2 = "0.20"
# HTTP / API client.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# UUIDs for trust event_ids.
uuid = { version = "1", features = ["v7", "serde"] }
# SSH key generation for the trust spike and the production signer wrapper.
ssh-key = { version = "0.6", features = ["ed25519", "getrandom"] }
# Test utilities.
insta = { version = "1", features = ["yaml"] }
