[workspace]
resolver = "2"
members = [
    "crates/nexum-core",
    "crates/nexum-cli",
    "crates/nexum-mcp",
]

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/Wintersta7e/nexum"
authors = ["Wintersta7e"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# Allowed exceptions; document each one in PR before adding.
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
# Pin everything explicitly. Bump deliberately, not opportunistically.
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
# Storage / search — pinned versions verified during stack-validation.
rusqlite = { version = "0.39", features = ["backup", "bundled", "vtab"] }
sqlite-vec = "0.1"
# Embeddings — `ort` is still pre-1.0 in the 2.x series.
ort = { version = "=2.0.0-rc.12", features = ["download-binaries"] }
# `ndarray` is exposed by `ort`'s public tensor API; pin to the same major
# (`0.17`) that `ort = "=2.0.0-rc.12"` depends on to avoid version skew.
ndarray = "0.17"
tokenizers = "0.20"
# Concurrency.
rayon = "1"
fs2 = "0.4"
# Regex — used by secret-shaped substring redaction.
regex = "1"
# Test utilities — temp dirs for the test harness.
tempfile = "3"
walkdir = "2"
# Cryptographic hashing for the index DDL apply path and path-hint hashing.
sha2 = "0.11"
# Timestamps for init (config.toml established_at, META.yml init_at).
chrono = { version = "0.4", features = ["serde"] }
# MCP framework — macros + server runtime + stdio transport.
rmcp = { version = "1", features = ["macros", "server", "transport-io"] }
# JSON Schema derive for the MCP tool input DTOs. `rmcp` re-exports the
# trait, but the `#[derive(JsonSchema)]` macro expands to a bare `schemars`
# crate path, so the crate must also be a direct dependency.
schemars = "1"
# Git.
git2 = "0.20"
# HTTP / API client.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
# Async stream combinators (StreamExt) for reqwest's bytes_stream.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# UUIDs for trust event_ids.
uuid = { version = "1", features = ["v7", "serde"] }
# SSH key generation for the trust spike and the production signer wrapper.
ssh-key = { version = "0.6", features = ["ed25519", "getrandom"] }
# Test utilities.
insta = { version = "1", features = ["yaml"] }
