[package]
name = "nexum-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for nexum"

[lints]
workspace = true

[[bin]]
name = "nexum"
path = "src/main.rs"

[dependencies]
nexum-core = { path = "../nexum-core" }
clap = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ssh-key = { workspace = true }
rusqlite = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sqlite-vec = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
