[package]
name = "nexum-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) server for nexum"

[lints]
workspace = true

[lib]
name = "nexum_mcp"
path = "src/lib.rs"

[[bin]]
name = "nexum-mcp"
path = "src/main.rs"

[dependencies]
nexum-core = { path = "../nexum-core" }
anyhow = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
# `client` + `transport-child-process` drive the in-process duplex test
# harness and the child-process stdio smoke test. `tokio`'s `test-util`
# feature provides `tokio::io::duplex`.
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
# The harness generates an ephemeral ed25519 keypair to feed `init::run`,
# mirroring the CLI / core test commons — no committed credentials.
ssh-key = { workspace = true }

[features]
# The tool-catalog test (`tests/tool_list.rs`) asserts all six tools are
# registered; it stays RED until the tool handlers land. Gated off by
# default so the workspace `cargo test --all-targets` gate stays green
# between tasks. The last tool task removes this gate for good.
full-tool-catalog = []
